[tool.poetry]
name = "new code new new"
version = "0.1.0"
description = "finish what i don't finish"
authors = ["Soloway-1 <poppmikola@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
